# ms

./: .gitignore  README.md  diagram.ipynb  disruptor_runner.sh  docker-compose.yml  fake_user_data.ipynb  kafka_consumer.py  kafka_producer.ipynb
actix_gw/: Cargo.toml  Dockerfile  README.md
actix_gw/src/: errors.rs  landlordsroutes.rs  main.rs  midw.rs  userroutes.rs
actix_landlords_ms/: Cargo.toml
actix_landlords_ms/src/: main.rs
actix_landlords_ms/src/landlords/application_layer/: landlords_service.rs  mod.rs
actix_landlords_ms/src/landlords/domain_layer/: landlord.rs  landlord_address.rs  mod.rs
actix_landlords_ms/src/landlords/infrastructure_layer/: auth_repo.rs  custom_error_repo.rs  landlords_repository.rs  mod.rs
actix_landlords_ms/src/landlords/presentation_layer/: landlords_controller.rs  mod.rs
actix_properties_ms/: Cargo.toml  Dockerfile
actix_properties_ms/data/: beb2abd7-4070-440b-8003-ec6633e32029-3.avif
actix_properties_ms/src/: main.rs
actix_properties_ms/src/properties/application_layer/: mod.rs  properties_service.rs  property_address_service.rs  property_photos_service.rs
actix_properties_ms/src/properties/domain_layer/: mod.rs  property.rs  property_address.rs  property_photos.rs
actix_properties_ms/src/properties/infrastructure_layer/: kafka_consumer.rs  mod.rs  properties_repository.rs  property_address_repository.rs  property_photos_repository.rs
actix_properties_ms/src/properties/presentation_layer/: mod.rs  properties_controller.rs  property_address_controller.rs  property_photos_controller.rs
actix_user_ms/: Cargo.toml  Dockerfile  README.md
actix_user_ms/src/: errors.rs  main.rs
actix_user_ms/src/user/application_layer/: user_service.rs
actix_user_ms/src/user/domain_layer/: diary_settings.rs  mod.rs  user.rs  user_address.rs  user_audit_trail.rs  user_changes_made.rs  user_note.rs
actix_user_ms/src/user/infrastructure_layer/: jwt_repo.rs  mod.rs  user_repository.rs
actix_user_ms/src/user/presentation_layer/: user_controller.rs
axum_landlord_server/: Cargo.toml
axum_landlord_server/src/: main.rs
axum_landlord_server/src/landlord/application_layer/: landlord_service.rs  mod.rs
axum_landlord_server/src/landlord/domain_layer/: additional_landlord_details.rs  landlord.rs  landlord_address.rs  landlord_management_details.rs  mod.rs
axum_landlord_server/src/landlord/infrastructure_layer/: jwt_repository.rs  kafka_consumer_repository.rs  kafka_producer_repository.rs  landlord_repository.rs  mod.rs  route_auth_repo.rs
axum_landlord_server/src/landlord/presentation_layer/: landlord_controller.rs  mod.rs
axum_property_server/: Cargo.toml  Dockerfile
axum_property_server/src/: main.rs
axum_property_server/src/property/application_layer/: mod.rs  property_service.rs
axum_property_server/src/property/domain_layer/: audit_trail.rs  certificate_exp.rs  epc_details.rs  furnishing_status.rs  marketing_channels.rs  marketing_details.rs  mod.rs  property.rs  property_address.rs  property_brochures.rs  property_checklists.rs  property_details.rs  property_docs.rs  property_features.rs  property_floorplans.rs  property_keys_sec.rs  property_licence.rs  property_notes.rs  property_photos.rs  property_rent.rs  property_task.rs  responsibility_details.rs  room_details.rs
axum_property_server/src/property/infrastructure_layer/: custom_error_repo.rs  jwt_repo.rs  mod.rs  property_repository.rs  route_auth_repo.rs
axum_property_server/src/property/presentation_layer/: mod.rs  property_controller.rs
client/: bun.lockb  package.json
client/src/: app.tsx
client/src/components/: Animation.tsx  Nav.tsx
client/src/css/: animation.module.css  app.css  home.module.css  lettings.module.css  nav.module.css  notfound.module.css  sales.module.css
client/src/routes/: [...404].tsx  admin.tsx  index.tsx  lettings.tsx  sales.tsx
crossbeamtest/: Cargo.toml
crossbeamtest/src/: main.rs
grpc_apigw_redis/: Cargo.toml  Dockerfile
grpc_apigw_redis/src/: grpc_routes.rs  main.rs  merg_serv.rs  mware.rs
kafka_consumer_rust/: Cargo.toml  README.md
kafka_consumer_rust/src/: main.rs
kafka_producer/: Cargo.toml
kafka_producer/src/: main.rs
manifests/: gateway.yaml  httpsgateway.yaml  ip-pool.yaml  pv.yaml  pv2.yaml  redpanda-cluster.yaml  server-ingress.yaml
manifests/cloudflare/: cloudflare-gateway.yaml
manifests/db/: userservice-db.yaml
manifests/fake-ca/: httpandhttpsgw.yaml  httpsgateway.yaml
manifests/fake-ca/copy/: httpandhttpsgw.yaml
manifests/pg-cloud/: cluster.yaml  minio-two.yaml  schema.sql
manifests/redis/: cluster.yaml  custom-values.yaml  redis-state.yaml
protos/: properties.proto  staffusers.proto
rust_cc/: Cargo.toml
rust_cc/src/: crossbeam_test.rs  main.rs
rust_cc/test/output/: output_1.avif
test_api/: Cargo.toml
test_api/src/: main.rs
test_api_copy/src/: main.rs
tests/rust_grpc_noredis_test/: rust_grpc_noredis_test_1.js  rust_grpc_noredis_test_2.js  rust_grpc_noredis_test_3.js
tests/rust_grpc_redis_test/: rust_grpc_test_1.js  rust_grpc_test_2.js  rust_grpc_test_3.js
tests/rust_noredis_test/: rust_test_noredis_1.js  rust_test_noredis_2.js  rust_test_noredis_3.js
tests/rust_redis_test/: rust_test_1.js  rust_test_2.js  rust_test_3.js
tests/spring_noredis_test/: spring_noredis_test_1.js  spring_noredis_test_2.js  spring_noredis_test_3.js
tests/spring_redis_test/: spring_redis_test_1.js  spring_redis_test_2.js  spring_redis_test_3.js
usersgrpcserver/: Cargo.toml  Dockerfile  build.rs
usersgrpcserver/protos/: staffusers.proto
usersgrpcserver/src/: main.rs  mware.rs
