[package]
name = "axum_landlord_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
sqlx = {version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "uuid", "bigdecimal"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
jsonwebtoken = "9.2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
axum-macros = "0.4.1"
rdkafka = "0.36.2"
log = "0.4.20"


[profile.release-lto]
inherits = "release"
lto = "fat"
opt-level = 3


[features]
build-bindings = []