[package]
name = "axum_property_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = {version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "uuid", "bigdecimal"] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.34.3"
serde = { version = "1.0.195", features = ["derive"] }
jsonwebtoken = "9.2.0"
serde_json = "1.0"
axum-macros = "0.4.1"
image = { version = "0.24.7", features = ["avif", "webp"] }
mime = "0.3.17"
multer = "3.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures-util = "0.3.29"
crossbeam-channel = "0.5.12"
futures = "0.3.30"
num_cpus = "1.16.0"
signal-hook = "0.3.17"
crossbeam-utils = "0.8.19"
rayon = "1.9.0"
tracing-futures = "0.2.5"
threadpool = "1.8.0"


[profile.release-lto]
inherits = "release"
lto = "fat"
opt-level = 3


[features]
build-bindings = []
# cargo run --profile release-lto