[package]
name = "kafka_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
futures-util = { version = "0.3.0", default-features = false }
libc = "0.2.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
rdkafka = "0.36.0"
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
clap = "4.4.8"
prost = "0.12.4"
